--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react": "^16.8.6",
     "react-d3-tree": "^1.12.3",
     "react-dom": "^16.8.6",
+    "react-fileupload-progress": "^0.4.2",
     "react-progress-button": "^5.1.0",
     "react-scripts": "2.0.5"
   },
