--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "react-dom": "^16.8.6",
     "react-fileupload-progress": "^0.4.2",
     "react-progress-button": "^5.1.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-toasts": "^3.0.3",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,6 +19,7 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000/",
+  "socketport": "http://localhost:4000/",
   "browserslist": [
     ">0.2%",
     "not dead",
