--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.16.4",
     "react-archer": "^1.1.0",
     "react-fileupload-progress": "^0.4.2",
-    "react-progress-button": "^5.1.0"
+    "react-progress-button": "^5.1.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0"
