--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000/",
-  "socketport": "http://localhost:4000/",
+  "socketport1": "http://localhost:4000/",
+  "socketport": "10.1.8.51:4000/",
   "browserslist": [
     ">0.2%",
     "not dead",
