--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.4",
     "react-archer": "^1.1.0",
     "react-fileupload-progress": "^0.4.2",
     "react-progress-button": "^5.1.0",
