--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
   },
   "proxy": "http://localhost:5000/",
   "socketport1": "http://localhost:4000/",
-  "socketport": "10.1.8.51:4000/",
+  "socketport": "52.183.78.102:4000/",
+  "socketportold": "10.1.8.51:4000/",
   "browserslist": [
     ">0.2%",
     "not dead",
