--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,8 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000/",
-  "socketport": "http://localhost:4000/",
-  "socketport1": "52.183.78.102:4000/",
+  "socketport1": "http://localhost:4000/",
+  "socketport": "52.183.78.102:4000/",
   "socketportold": "10.1.8.51:4000/",
   "browserslist": [
     ">0.2%",
