--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "react-fileupload-progress": "^0.4.2",
     "react-progress-button": "^5.1.0",
     "react-scripts": "2.0.5",
+    "react-select": "^3.0.4",
+    "react-toastify": "^5.3.1",
     "react-toasts": "^3.0.3",
     "socket.io-client": "^2.2.0"
   },
